--- a/style.css
+++ b/style.css
@@ -16,12 +16,15 @@ header{
     z-index: 10;
     color: #fff;
     text-align: center;
-    padding: 1rem 0;
+    padding: .5rem 0;
+    font-size: 1rem;
 }
 
 header a {
     color: #fff;
     text-decoration: none;
+    width: 1rem;
+    margin: 0 auto;
 }
 
 header a svg{
